directwinfinder; heuristic tuning