@@ -1,27 +1,24 @@
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Queue;
-import java.util.Set;
-
 import org.ggp.base.util.Pair;
+import org.ggp.base.util.gdl.grammar.GdlConstant;
+import org.ggp.base.util.gdl.grammar.GdlPool;
 import org.ggp.base.util.propnet.architecture.Component;
 import org.ggp.base.util.propnet.architecture.PropNet;
-import org.ggp.base.util.propnet.architecture.components.And;
-import org.ggp.base.util.propnet.architecture.components.Constant;
-import org.ggp.base.util.propnet.architecture.components.Not;
-import org.ggp.base.util.propnet.architecture.components.Or;
-import org.ggp.base.util.propnet.architecture.components.Proposition;
-import org.ggp.base.util.propnet.architecture.components.Transition;
+import org.ggp.base.util.propnet.architecture.components.*;
 import org.ggp.base.util.statemachine.Role;
+
+import java.util.*;
 
 public class PropNetOptimizer {
 
-	private static int condenseDuplicates(PropNet p, Component c, List<Component> possibles) {
+	PropNet p;
+
+	public PropNetOptimizer(PropNet p) {
+		this.p = p;
+	}
+
+	private Component trueComponent = null;
+
+	private int condenseDuplicates(Component c, List<Component> possibles) {
 		for (Component poss : possibles) {
 			if (!c.getClass().equals(poss.getClass())) continue;
 			for (Component next : c.getOutputs()) {
@@ -37,7 +34,7 @@ public class PropNetOptimizer {
 		return 0;
 	}
 
-	private static void findComponentsBackwards(Component current, Set<Component> visited) {
+	private void findComponentsBackwards(Component current, Set<Component> visited) {
 		Queue<Component> queue = new LinkedList<>();
 		queue.add(current);
 		while (!queue.isEmpty()) {
@@ -50,7 +47,7 @@ public class PropNetOptimizer {
 		}
 	}
 
-	private static int trimInvalidDoes(PropNet p, Map<String, Integer> inSizeMap) {
+	private int trimInvalidDoes(Map<String, Integer> inSizeMap) {
 		int ntrimmed = 0;
 		for (String doeslegal : Arrays.asList("does", "legal")) {
 			for (Component c : new HashSet<>(p.getComponents())) {
@@ -66,7 +63,141 @@ public class PropNetOptimizer {
 		return ntrimmed;
 	}
 
-	private static int factorAndOr(PropNet p)
+	// (X or Y) and (X or Y or Z) ==> X or Y
+	// (X and Y) or (X and Y and Z) ==> X and Y
+	private int removeRedundantAndOr() {
+		int count = 0;
+		for (Component c : p.getComponents()) {
+			List<Pair<Class<?>, Class<?>>> classList = Arrays.asList(
+					Pair.of(And.class, Or.class),
+					Pair.of(Or.class, And.class));
+			for (Pair<Class<?>, Class<?>> f : classList) {
+				// convention here: left = or, right = and
+				if (!f.left.isInstance(c)) continue;
+				List<Set<Component>> andInputSets = new ArrayList<>();
+				List<Component> cinputs = new ArrayList<>(c.getInputs());
+				Collections.sort(cinputs,
+						Comparator.comparingInt(x -> x.getInputs().size()));
+				for (Component in : cinputs) {
+					if (!f.right.isInstance(in)) continue;
+					boolean isSubset = false;
+					for (Set<Component> inputSet : andInputSets) {
+						if (isSubset(inputSet, in.getInputs())) {
+							count += 1;
+							c.removeInput(in);
+							in.removeOutput(c);
+							isSubset = true;
+							break;
+						}
+					}
+					if (!isSubset) andInputSets.add(in.getInputs());
+				}
+			}
+		}
+		return count;
+	}
+
+	// x and (~x or y) => x and y
+	// x or (~x and y) => x or y
+	private int removeContradictions() {
+
+		Map<Class<?>, Map<Set<Component>, Component>> extant = new HashMap<>();
+		extant.put(And.class, new HashMap<>());
+		extant.put(Or.class, new HashMap<>());
+
+		for (Component c : p.getComponents()) {
+			if (!extant.containsKey(c.getClass())) continue;
+			extant.get(c.getClass()).put(new HashSet<>(c.getInputs()), c);
+		}
+
+		int ntrimmed = 0;
+		for (Component c : new HashSet<>(p.getComponents())) {
+			List<Pair<Class<?>, Class<?>>> classList = Arrays.asList(
+					Pair.of(And.class, Or.class),
+					Pair.of(Or.class, And.class));
+			for (Pair<Class<?>, Class<?>> f : classList) {
+				// convention here: left = or, right = and
+				if (!f.left.isInstance(c)) continue;
+				Map<Component, Boolean> inputs = new HashMap<>();
+				removeContradictionsInputFindingHelper(
+						inputs, c, f.left, f.right, true);
+				for (Component and : new HashSet<>(c.getInputs())) {
+					if (!f.right.isInstance(and)) continue;
+					boolean trimThisAnd = false;
+					Set<Component> toKeep = new HashSet<>();
+					for (Component input : and.getInputs()) {
+						Component posInput = input;
+						boolean value = true;
+						while (posInput instanceof Not) {
+							value = !value;
+							posInput = posInput.getSingleInput();
+						}
+						if (inputs.containsKey(posInput)) {
+							if (inputs.get(posInput) == value) {
+								trimThisAnd = true;
+								break;
+							}
+						} else {
+							toKeep.add(input);
+						}
+					}
+
+					if (trimThisAnd) {
+						and.removeOutput(c);
+						c.removeInput(and);
+						ntrimmed++;
+					} else {
+						Map<Set<Component>, Component> extantAnd = extant.get(f.right);
+						/*
+						kind of jank; only optimizes out if there is a perfect
+						other component to switch into. this way the number of edges
+						cannot possibly go up.
+						 */
+						if (!toKeep.equals(and.getInputs())
+								&& extantAnd.containsKey(toKeep)) {
+							Component keep = extantAnd.get(toKeep);
+							if (toKeep.equals(keep.getInputs())) {
+								and.removeOutput(c);
+								c.removeInput(and);
+								keep.addOutput(c);
+								c.addInput(keep);
+								ntrimmed++;
+							}
+						}
+					}
+				}
+			}
+		}
+		return ntrimmed;
+	}
+
+	private void removeContradictionsInputFindingHelper(
+			Map<Component, Boolean> inputs, Component c,
+			Class<?> or, Class<?> and, boolean flip) {
+		if (!or.isInstance(c)) {
+			inputs.put(c, flip);
+			return;
+		}
+		for (Component input : c.getInputs()) {
+			if (input instanceof Not) {
+				removeContradictionsInputFindingHelper(
+						inputs, input.getSingleInput(), and, or, !flip);
+			} else {
+				removeContradictionsInputFindingHelper(
+						inputs, input, or, and, flip);
+			}
+		}
+	}
+
+	private <T> boolean isSubset(Set<T> inner, Set<T> outer) {
+		for (T first : inner) {
+			if (!outer.contains(first)) return false;
+		}
+		return true;
+	}
+
+	// (x and y1) or (x and y2) => x or (y1 and y2)
+	private int factorAndOr()
 			throws InstantiationException, IllegalAccessException {
 		int ntrimmed = 0;
 		for (Component c : new HashSet<>(p.getComponents())) {
@@ -105,14 +236,24 @@ public class PropNetOptimizer {
 
 				// remove old links
 
-				Component and = (Component) f.right.newInstance();
+				Component and = null;
+				try {
+					and = (Component) f.right.getDeclaredConstructor().newInstance();
+				} catch (Exception e) {
+					e.printStackTrace();
+				}
 				p.addComponent(and);
 				and.addOutput(c);
 				c.addInput(and);
 				and.addInput(bestFactor);
 				bestFactor.addOutput(and);
 
-				Component or = (Component) f.left.newInstance();
+				Component or = null;
+				try {
+					or = (Component) f.left.getDeclaredConstructor().newInstance();
+				} catch (Exception e) {
+					e.printStackTrace();
+				}
 				p.addComponent(or);
 				or.addOutput(and);
 				and.addInput(or);
@@ -135,7 +276,7 @@ public class PropNetOptimizer {
 		return ntrimmed;
 	}
 
-	private static int condenseDoubles(PropNet p, Map<String, Integer> inSizeMap) {
+	private int condenseDoubles(Map<String, Integer> inSizeMap) {
 		int ntrimmed = 0;
 		List<Class<?>> classList = Arrays.asList(Or.class, And.class);
 		for (Class<?> cls : classList) {
@@ -167,7 +308,7 @@ public class PropNetOptimizer {
 				}
 				delta += newInputs.size() - c.getInputs().size();
 				if (cls.equals(And.class)) continue;
-				Map<String, Set<Component>> inMap = createInputMap(p, newInputs);
+				Map<String, Set<Component>> inMap = createInputMap(newInputs);
 				for (Role role : p.getRoles()) {
 					int sz = inMap.get(role.toString()).size();
 					int delta2 = (inSizeMap.get(role.toString()) - sz) + 2 - sz;
@@ -199,6 +340,9 @@ public class PropNetOptimizer {
 		}
 		for (Component c : new HashSet<>(p.getComponents())) {
 			if (c instanceof Not) {
+				if (c.getInputs().size() != 1) {
+					System.out.println(c + " " + c.getInputs());
+				}
 				Component prev = c.getSingleInput();
 				if (!(prev instanceof Not)) continue;
 				Component pp = prev.getSingleInput();
@@ -213,14 +357,14 @@ public class PropNetOptimizer {
 		return ntrimmed;
 	}
 
-//	private static String getName(Component comp) {
+//	private  String getName(Component comp) {
 //		String toParse = comp.toString();
 //		int start = toParse.indexOf("label=\"") + 7;
 //		int end = toParse.indexOf("\"", start);
 //		return toParse.substring(start, end);
 //	}
 
-	private static Map<String, Set<Component>> createInputMap(PropNet p, Set<Component> inputs) {
+	private Map<String, Set<Component>> createInputMap(Set<Component> inputs) {
 		Map<String, Set<Component>> inMap = new HashMap<>();
 		for (Role role : p.getRoles()) {
 			inMap.put(role.toString(), new HashSet<>());
@@ -234,11 +378,11 @@ public class PropNetOptimizer {
 		return inMap;
 	}
 
-	private static int simplifyOrDoes(PropNet p, Map<String, Integer> inSizeMap) {
+	private int simplifyOrDoes(Map<String, Integer> inSizeMap) {
 		int ntrimmed = 0;
 		for (Component c : new HashSet<>(p.getComponents())) {
 			if (!(c instanceof Or)) continue;
-			Map<String, Set<Component>> inMap = createInputMap(p, c.getInputs());
+			Map<String, Set<Component>> inMap = createInputMap(c.getInputs());
 			for (Role role : p.getRoles()) {
 				int sz = inMap.get(role.toString()).size();
 				int delta = (inSizeMap.get(role.toString()) - sz) + 2 - sz;
@@ -271,9 +415,12 @@ public class PropNetOptimizer {
 		return ntrimmed;
 	}
 
-	private static Set<Component> getCritical(PropNet p, boolean includeBaseInit) {
+	private Set<Component> getCritical(boolean includeBaseInit) {
 		Set<Component> critical = new HashSet<>();
 		// critical: terminal, input, goal, legal
+		if (p.getTerminalProposition() == null) {
+			Log.println("error: no terminal proposition. something bad happened");
+		}
 		critical.add(p.getTerminalProposition());
 		critical.addAll(p.getInputPropositions().values());
 		for (Role role : p.getRoles()) {
@@ -282,12 +429,12 @@ public class PropNetOptimizer {
 		}
 		if (includeBaseInit) {
 			critical.addAll(p.getBasePropositions().values());
-			critical.add(p.getInitProposition());
+			if (p.getInitProposition() != null) critical.add(p.getInitProposition());
 		}
 		return critical;
 	}
 
-	private static int removeUnreachable(PropNet p, Set<Component> critical) {
+	private int removeUnreachable(Set<Component> critical) {
 
 		Set<Component> important = new HashSet<>();
 		for (Component comp : critical) {
@@ -303,7 +450,57 @@ public class PropNetOptimizer {
 		return ntrimmed;
 	}
 
-	private static int condenseIdentical(PropNet p, Set<Component> critical) {
+	// all DOES with no corresponding LEGAL are hardwired to FALSE.
+	private int removeDoesWithoutLegal() {
+		int ntrimmed = 0;
+		for (Component c : new ArrayList<>(p.getComponents())) {
+			if (!(c instanceof Proposition)) continue;
+			Proposition prop = (Proposition) c;
+			GdlConstant type = prop.getName().getName();
+			if (type == GdlPool.DOES) {
+				if (!p.getLegalInputMap().containsKey(prop)) {
+//					Log.println("removing useless action " + prop.getName());
+					ntrimmed += hardwire(prop, false);
+				}
+			}
+		}
+		return ntrimmed;
+	}
+
+	// ONLY SHOULD BE USED ON DOES COMPONENTS
+	// NEEDS TO CONSIDER CRITICAL COMPONENTS TO WORK ON COMPONENTS EARLIER IN TREE
+	private int hardwire(Component c, boolean value) {
+		int ntrimmed = 0;
+		for (Component next : new HashSet<>(c.getOutputs())) {
+			ntrimmed += hardwire(c, next, false);
+		}
+		p.removeComponent(c);
+		return ntrimmed;
+	}
+
+	private int hardwire(Component comp, Component next, boolean value) {
+		int ntrimmed = 0;
+		comp.removeOutput(next);
+		next.removeInput(comp);
+		ntrimmed++;
+		if (next instanceof Transition) {
+			if (value) {
+				getTrueComponent().addOutput(next);
+				next.addInput(getTrueComponent());
+				ntrimmed--;
+			}
+		} else if (next instanceof Not) {
+			ntrimmed += hardwire(next, !value);
+		} else if (next.getInputs().isEmpty()) {
+			ntrimmed += hardwire(next, value);
+		} else if ((next instanceof And && !value)
+				|| (next instanceof Or && value)) {
+			ntrimmed += hardwire(next, value);
+		}
+		return ntrimmed;
+	}
+
+	private int condenseIdentical(Set<Component> critical) {
 		int ntrimmed = 0;
 		Map<Set<Component>, List<Component>> inputMaps = new HashMap<>();
 		for (Component c : new HashSet<>(p.getComponents())) {
@@ -314,12 +511,12 @@ public class PropNetOptimizer {
 				inputMaps.put(c.getInputs(), new ArrayList<>());
 			}
 			List<Component> possibles = inputMaps.get(c.getInputs());
-			ntrimmed += condenseDuplicates(p, c, possibles);
+			ntrimmed += condenseDuplicates(c, possibles);
 		}
 		return ntrimmed;
 	}
 
-	private static int removeSingleInput(PropNet p, Set<Component> critical) {
+	private int removeSingleInput(Set<Component> critical) {
 		int ntrimmed = 0;
 		for (Component c : new HashSet<>(p.getComponents())) {
 			if (c instanceof Not) continue;
@@ -338,11 +535,32 @@ public class PropNetOptimizer {
 		return ntrimmed;
 	}
 
-	public static void optimizePropnet(PropNet p)
-			throws InstantiationException, IllegalAccessException {
+	private Component getTrueComponent() {
+		if (trueComponent == null || !p.getComponents().contains(trueComponent)) {
+			trueComponent = new Constant(true);
+			p.addComponent(trueComponent);
+		}
+		return trueComponent;
+	}
 
-		for (int round = 1;; round++) {
-			List<Integer> print = new ArrayList<>();
+	public void optimizePropnet(boolean keepAllBases)
+			throws InstantiationException, IllegalAccessException {
+//		if (true) return;
+
+		trueComponent = null;
+		for (Component comp : p.getComponents()) {
+			if (comp instanceof Constant && comp.getValue()) {
+				trueComponent = comp;
+				break;
+			}
+		}
+
+//		if (true) return;
+
+		List<Integer> changed = new ArrayList<>();
+
+		for (int round = 1; ; round++) {
+
 			Log.print("optimizing propnet: round " + round + " ");
 
 			Map<String, Integer> inSizeMap = new HashMap<>();
@@ -351,19 +569,36 @@ public class PropNetOptimizer {
 				inSizeMap.put(s, p.getLegalPropositions().get(role).size());
 			}
 
-			Set<Component> critical = getCritical(p, false);
-			Set<Component> criticalExtended = getCritical(p, true);
+			Set<Component> critical = getCritical(keepAllBases);
+			Set<Component> criticalExtended = getCritical(true);
 
-			print.add(trimInvalidDoes(p, inSizeMap));
-			// factorAndOr: requires removeUnreachable
-			print.add(factorAndOr(p));
-			// condenseDoubles: requires simplifyOrDoes, removeUnreachable
-			print.add(condenseDoubles(p, inSizeMap));
-			print.add(simplifyOrDoes(p, inSizeMap));
-			print.add(removeUnreachable(p, critical));
-			print.add(condenseIdentical(p, criticalExtended));
-			print.add(removeSingleInput(p, criticalExtended));
+			// metrics of propnet size:
+			/*
+			1. number of edges
+			2. sum(c.noutputs * c.ninputs for components c)
+					[used by removeContradictions]
+			 */
 
+			List<Integer> order = new ArrayList<>(Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9));
+			List<Integer> print = new ArrayList<>(order);
+			Collections.shuffle(order);
+
+			for (int x : order) {
+
+				if (x == 0) print.set(x, trimInvalidDoes(inSizeMap));
+				// factorAndOr: requires removeUnreachable
+				if (x == 1) print.set(x, factorAndOr());
+				if (x == 2) print.set(x, removeRedundantAndOr());
+				if (x == 3) print.set(x, removeContradictions());
+				// condenseDoubles: requires simplifyOrDoes, removeUnreachable
+				if (x == 4) print.set(x, condenseDoubles(inSizeMap));
+				if (x == 5) print.set(x, simplifyOrDoes(inSizeMap));
+
+				if (x == 6) print.set(x, removeUnreachable(critical));
+				if (x == 7) print.set(x, removeDoesWithoutLegal());
+				if (x == 8) print.set(x, condenseIdentical(criticalExtended));
+				if (x == 9) print.set(x, removeSingleInput(criticalExtended));
+			}
 			// === removing single-input components
 			// i.e. are anything that has one input (i.e. anon, view props)
 			// exceptions: NOT, TRANSITION, CONSTANT, and non-view propositions.
@@ -374,18 +609,15 @@ public class PropNetOptimizer {
 							p.getNumLinks(),
 							p.getBasePropositions().size()));
 
-			boolean cont = false;
-			for (int i = 0; i < print.size(); i++) {
-				if (print.get(i) != 0) cont = true;
-			}
-			if (!cont) break;
+			if (print.equals(changed)) break;
+			changed = print;
 		}
 		Log.println("verifying propnet consistency");
-		checkConsistency(p);
+		checkConsistency();
 		Log.println("propnet optimization complete");
 	}
 
-	private static void checkConsistency(PropNet p) {
+	private void checkConsistency() {
 		for (Component c : p.getComponents()) {
 			for (Component in : c.getInputs()) {
 				assert p.getComponents().contains(in);
